--- a/javascript-data-visualisation/challenge-js-files/index.html
+++ b/javascript-data-visualisation/challenge-js-files/index.html
@@ -27,6 +27,10 @@
   <link rel="stylesheet" href="./assets/font-awesome.min.css">
   <link rel="stylesheet" href="./assets/statexpflat.css">
   <link rel="stylesheet" href="./assets/statexpflat-grid.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script><!------------------------------------------------------------->
+  
+
+
 
   <style>
     a:lang(ar),
@@ -613,7 +617,7 @@
           </div>
 
           <h1 id="firstHeading" class="firstHeading">Archive:Crime statistics </h1>
-
+        
           <div id="bodyContent" class="bodyContent">
 
             <!-- start content -->
@@ -798,6 +802,7 @@
               <h3>
                 <span class="mw-headline" id="Crimes_et_d.C3.A9lits_enregistr.C3.A9s_par_les_services_de_police">Crimes recorded by the police</span>
               </h3>
+
 
 
               <table cellspacing="0" cellpadding="0" id="table1">
@@ -2062,6 +2067,18 @@
 
     <!--END PAGE-->
   </div>
+  <script src="https://uicdn.toast.com/tui.chart/latest/tui-chart.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.5.1.js"
+  integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+  crossorigin="anonymous"></script>
+  <script src="assets/myScript.js"></script>
+
+  
 </body>
 
 </html>
